logs/validate.20260402-065259.log
error: expected parentheses
   --> src/Chap19/ArraySeqMtEphSlice.rs:843:37
    |
843 |                     reveal_with_fuel<T>(spec_prefix_fold::<T>, 2);
    |                                     ^

error[E0425]: cannot find type `ArraySeqMtEphSliceS` in this scope
    --> src/Chap19/ArraySeqMtEphSlice.rs:1105:50
     |
1105 |     impl<T: std::fmt::Debug> std::fmt::Debug for ArraySeqMtEphSliceS<T> {
     |                                                  ^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `ArraySeqMtEphSliceS` in this scope
    --> src/Chap19/ArraySeqMtEphSlice.rs:1113:54
     |
1113 |     impl<T: std::fmt::Display> std::fmt::Display for ArraySeqMtEphSliceS<T> {
     |                                                      ^^^^^^^^^^^^^^^^^^^ not found in this scope

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0425`.
Elapsed: 1s
Sampled Memory Usage: peak rust_verify RSS: 0MB, peak z3 RSS: 0MB, min free: 24933MB
Sampled CPU Usage: rust_verify: 0s, z3 children: 0s
